findByUserIdAndGarageId